@@ -1,5 +1,8 @@
 [B]Version 0.2.0[/B]
     * Refactoring (Using now the library DDLScraper)
+    * New sub categories: Mac Applications & Windows Applications
+    * New supported filehoster: megaupload.com, multiupload.com, wupload.com, oron.com
+    * New setting: 'Alternative Filehoster 3' (due to the huge amount of filehoster)
 
 [B]Version 0.1.1[/B]
     * Added search function
